--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="section-title position-relative text-center mx-auto mb-5 pb-3" style="max-width: 600px;">
             <h2 class="text-primary font-secondary">About Me</h2>
             <h1 class="display-4 text-uppercase">MD JAFOR AHMAD</h1>
-            <h4 class="text-black font-secondary">Founder at Crest-Wave</h4>
+            <h4 class="text-black font-secondary">Founder at T-Ally</h4>
             <span>27 Purana Paltan (1st Floor)</span><br>
             <span>Dhaka-1000, BD</span>
         </div>
