--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2 class="text-primary font-secondary">About Me</h2>
             <h1 class="display-4 text-uppercase">MD JAFOR AHMAD</h1>
             <h4 class="text-black font-secondary">Founder at T-Ally</h4>
-            <span>27 Purana Paltan (1st Floor)</span><br>
+            <span>27 Purana Paltan</span><br>
             <span>Dhaka-1000, BD</span>
         </div>
         <div class="owl-carousel testimonial-carousel">
