--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
 <div class="container-fluid about py-5">
     <div class="container">
         <div class="section-title position-relative text-center mx-auto mb-5 pb-3" style="max-width: 600px;">
-            <h2 class="text-primary font-secondary">About Me</h2>
+            <h2 class="text-primary font-secondary">About</h2>
             <h1 class="display-4 text-uppercase">MD JAFOR AHMAD</h1>
             <h4 class="text-black font-secondary">Founder at T-Ally</h4>
-            <span>27 Purana Paltan</span><br>
-            <span>Dhaka-1000, BD</span>
+            <span>Enthusiast of Technological Innovation | </br>Microsoft Aficionado I Committed to personal and professional growth through ongoing education.</span><br>
         </div>
         <div class="owl-carousel testimonial-carousel">
             <div class="testimonial-item bg-dark text-white border-inner p-4">
