--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
                         <div class="row g-4 align-items-center">
                             <div class="col-lg-7 animated fadeInLeft">
                                 <div class="text-sm-center text-md-start">
-                                    <h1 class="display-2 text-white mb-4">Protecting Freedom with the Power of Technology,</h1>
+                                    <h4 class="text-white text-uppercase fw-bold mb-4">Protecting Freedom </h4>
+                                    <h1 class="display-2 text-white mb-4">with the Power of Technology,</h1>
                                     <p class="mb-5 fs-5"><b> MJ-Ahmad's Pledge! </b> we need to build a bright, peaceful, modern, educated, cooperative, and compassionate Bangladesh.
                                     </p>
                                     <div class="d-flex justify-content-center justify-content-md-start flex-shrink-0 mb-4">
