--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                 <p class="fs-5"><span class="fa fa-check text-primary me-2"></span> Together for a Peaceful Bangladesh.</p>
                                 <p class="fs-5"><span class="fa fa-check text-primary me-2"></span> A Brighter Future for All.</p>
                             </div>
-                            <a class="btn btn-primary py-3 px-4 px-md-5 ms-2" href="https://mjahmad.com/contact.html">Join us</a>
+                            <a class="btn btn-primary py-3 px-4 px-md-5 ms-2" href="https://mjahmad.com/contact-page.html">Join us</a>
                         </div>
                     </div>
                     <div class="col-lg-5 wow fadeInRight" data-wow-delay="0.2s">
@@ -261,7 +261,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="d-flex align-items-center justify-content-lg-end h-100">
-                            <a class="btn btn-primary py-3 px-4 px-md-5 ms-2" href="https://mjahmad.com/contact.html">Contact us</a>
+                            <a class="btn btn-primary py-3 px-4 px-md-5 ms-2" href="https://mjahmad.com/contact-page.html">Contact us</a>
                         </div>
                     </div>
                 </div>
@@ -275,48 +275,48 @@
         <div class="row g-5">
             <div class="col-lg-12 col-md-6 text-center">
                 <h1 class="text-uppercase text-black mb-4">30% Discount For This Summer</h1>
-                <a href="https://mjahmad.com/contact.html" class="btn btn-primary border-inner py-3 px-5">Buy now</a>
+                <a href="https://mjahmad.com/contact-page.html" class="btn btn-primary border-inner py-3 px-5">Buy now</a>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="bg-primary border-inner text-center text-white p-5">
                     <h4 class="text-uppercase mb-3">Web Development</h4>
                     <p>Creating responsive and dynamic websites using HTML, CSS, JS, PHP.</p>
-                    <a href="https://mjahmad.com/contact.html" class="btn btn-dark border-inner py-3 px-5">Contact</a>
+                    <a href="https://mjahmad.com/contact-page.html" class="btn btn-dark border-inner py-3 px-5">Contact</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="bg-primary border-inner text-center text-white p-5">
                     <h4 class="text-uppercase mb-3">Payment Integration</h4>
                     <p>Implementing secure and efficient payment solutions with Stripe and VISA</p>
-                    <a href="https://mjahmad.com/contact.html" class="btn btn-dark border-inner py-3 px-5">Contact</a>
+                    <a href="https://mjahmad.com/contact-page.html" class="btn btn-dark border-inner py-3 px-5">Contact</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="bg-primary border-inner text-center text-white p-5">
                     <h4 class="text-uppercase mb-3">SEO Optimization</h4>
                     <p>Enhancing your website's visibility on search engines to attract more traffic.</p>
-                    <a href="https://mjahmad.com/contact.html" class="btn btn-dark border-inner py-3 px-5">Contact</a>
+                    <a href="https://mjahmad.com/contact-page.html" class="btn btn-dark border-inner py-3 px-5">Contact</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="bg-primary border-inner text-center text-white p-5">
                     <h4 class="text-uppercase mb-3">Technical Support</h4>
                     <p>Providing ongoing maintenance and support for your web projects.</p>
-                    <a href="https://mjahmad.com/contact.html" class="btn btn-dark border-inner py-3 px-5">Contact</a>
+                    <a href="https://mjahmad.com/contact-page.html" class="btn btn-dark border-inner py-3 px-5">Contact</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="bg-primary border-inner text-center text-white p-5">
                     <h4 class="text-uppercase mb-3">E-commerce Solution</h4>
                     <p>Setting up and managing online stores to help you reach a broader audience.</p>
-                    <a href="https://mjahmad.com/contact.html" class="btn btn-dark border-inner py-3 px-5">Contact</a>
+                    <a href="https://mjahmad.com/contact-page.html" class="btn btn-dark border-inner py-3 px-5">Contact</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="bg-primary border-inner text-center text-white p-5">
                     <h4 class="text-uppercase mb-3">Microsoft Solutions</h4>
                     <p>Leveraging my Microsoft Partner status to provide top-notch services.</p>
-                    <a href="https://mjahmad.com/contact.html" class="btn btn-dark border-inner py-3 px-5">Contact</a>
+                    <a href="https://mjahmad.com/contact-page.html" class="btn btn-dark border-inner py-3 px-5">Contact</a>
                 </div>
             </div>
         </div>
@@ -365,7 +365,7 @@
                                             <h4 class="mb-3">Web Development</h4>
                                             <p class="mb-4">Creating responsive and dynamic websites using HTML, CSS, JS, PHP.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact.html">Buy now</a>
+                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact-page.html">Buy now</a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -374,7 +374,7 @@
                                             <h4 class="mb-3">Payment Integration</h4>
                                             <p class="mb-4">Implementing secure and efficient payment solutions with Stripe and VISA
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact.html">Buy now</a>
+                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact-page.html">Buy now</a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -383,7 +383,7 @@
                                             <h4 class="mb-3">SEO Optimization</h4>
                                             <p class="mb-4">Enhancing your website's visibility on search engines to attract more traffic.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact.html">Buy now</a>
+                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact-page.html">Buy now</a>
                                         </div>
                                     </div>
                                 </div>
@@ -396,7 +396,7 @@
                                             <h4 class="mb-3">Technical Support</h4>
                                             <p class="mb-4">Providing ongoing maintenance and support for your web projects.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact.html">Buy now</a>
+                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact-page.html">Buy now</a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -405,7 +405,7 @@
                                             <h4 class="mb-3">E-commerce Solution</h4>
                                             <p class="mb-4">Setting up and managing online stores to help you reach a broader audience.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact.html">Buy now</a>
+                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact-page.html">Buy now</a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -414,7 +414,7 @@
                                             <h4 class="mb-3">Microsoft Solutions</h4>
                                             <p class="mb-4">Leveraging my Microsoft Partner status to provide top-notch services and solutions.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact.html">Buy now</a>
+                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact-page.html">Buy now</a>
                                         </div>
                                     </div>
                                 </div>
@@ -427,7 +427,7 @@
                                             <h4 class="mb-3">Custom Management Systems</h4>
                                             <p class="mb-4">Leveraging my Microsoft Partner status to provide top-notch services and solutions.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact.html">Buy now</a>
+                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact-page.html">Buy now</a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -436,7 +436,7 @@
                                             <h4 class="mb-3">Fundraising Support</h4>
                                             <p class="mb-4">Leveraging my Microsoft Partner status to provide top-notch services and solutions.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact.html">Buy now</a>
+                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact-page.html">Buy now</a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -445,7 +445,7 @@
                                             <h4 class="mb-3">Training and Development</h4>
                                             <p class="mb-4">Leveraging my Microsoft Partner status to provide top-notch services and solutions.
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact.html">Contact</a>
+                                            <a class="btn btn-primary py-2 px-4" href="https://mjahmad.com/contact-page.html">Contact</a>
                                         </div>
                                     </div>
                                 </div>
@@ -653,7 +653,7 @@
                             <a href="#"> About </a>
                             <a href="#"> Service</a>
                             <a href="#"> Portfolio</a>
-                            <a href="#"> Contact Us</a>
+                            <a href="https://mjahmad.com/contact-page.html"> Contact Us</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
