--- a/success.html
+++ b/success.html
@@ -14,6 +14,8 @@
     <div class="container">
         <h1>Success!</h1>
         <p>Your form has been submitted successfully.</p>
+        <p>We will contact you as soon as possible.</p>
+        <p>Best regards from "MJ Ahmed"</p>
         <a href="contact.html">Go back to the contact form</a>
     </div>
 </body>
