--- a/success.html
+++ b/success.html
@@ -16,7 +16,7 @@
         <p>Your form has been submitted successfully.</p>
         <p>We will contact you as soon as possible.</p>
         <p>Best regards from "MJ Ahmed"</p>
-        <a href="contact.html">Go back to the contact form</a>
+        <a href="https://mjahmad.com">Go back to the Home Page</a>
     </div>
 </body>
 </html>
