--- a/success.html
+++ b/success.html
@@ -15,7 +15,7 @@
         <h1>Success!</h1>
         <p>Your form has been submitted successfully.</p>
         <p>We will contact you as soon as possible.</p>
-        <p>Best regards from "MJ Ahmed"</p>
+        <p>Best regards from <a href="https://climate.stripe.com/ArsPAE">"MJ Ahmed"</a></p>
         <a href="https://mjahmad.com">Go back to the Home Page</a>
     </div>
 </body>
