--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <div class="collapse navbar-collapse" id="navbarCollapse">
                                 <div class="navbar-nav mx-0 mx-lg-auto bg-white">
                                     <a href="#" class="nav-item nav-link active">Home</a>
-                                    <a href="#" class="nav-item nav-link">About</a>
+                                    <a href="about-us.html" class="nav-item nav-link">About</a>
                                     <a href="#" class="nav-item nav-link">Service</a>
                                     <a href="#" class="nav-item nav-link">Blog</a>
                                     <div class="nav-item dropdown">
@@ -106,10 +106,10 @@
                                             <a href="#" class="dropdown-item">Our team</a>
                                         </div>
                                     </div>
-                                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                                    <a href="contact-page.html" class="nav-item nav-link">Contact</a>
                                     <div class="nav-btn ps-3">
                                         <button class="btn-search btn btn-primary btn-md-square mt-2 mt-lg-0 mb-4 mb-lg-0 flex-shrink-0" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search"></i></button>
-                                        <a href="#" class="btn btn-primary py-2 px-4 ms-0 ms-lg-3"> Get Solution</a>
+                                        <a href="contact-page.html" class="btn btn-primary py-2 px-4 ms-0 ms-lg-3"> Get Solution</a>
                                     </div>
                                 </div>
                             </div>
@@ -650,7 +650,7 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Quick Links</h4>
                             <a href="#"> Home</a>
-                            <a href="#"> About </a>
+                            <a href="https://mjahmad.com/about-us.html"> About </a>
                             <a href="#"> Service</a>
                             <a href="#"> Portfolio</a>
                             <a href="https://mjahmad.com/contact-page.html"> Contact Us</a>
@@ -670,10 +670,10 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
                             <a href="#"><i class="fa fa-map-marker-alt text-primary me-2"></i> 27 Purana Paltan, Dhaka-1000, BD</a>
-                            <a href="mailto:info@example.com"><i class="fas fa-envelope text-primary me-2"></i> mjahmad2024@outlook.com</a>
-                            <a href="mailto:info@example.com"><i class="fas fa-envelope text-primary me-2"></i> t-ally@outlook.com</a>
-                            <a href="tel:+012 345 67890"><i class="fas fa-phone text-primary me-2"></i> +880 132 2371643</a>
-                            <a href="tel:+012 345 67890" class="mb-3"><i class="fas fa-phone text-primary me-2"></i> +880 172 5463886</a>
+                            <a href="mailto:mjahmad2024@outlook.com"><i class="fas fa-envelope text-primary me-2"></i> mjahmad2024@outlook.com</a>
+                            <a href="mailto:t-ally@outlook.com"><i class="fas fa-envelope text-primary me-2"></i> t-ally@outlook.com</a>
+                            <a href="tel:+880 132 2371643"><i class="fas fa-phone text-primary me-2"></i> +880 132 2371643</a>
+                            <a href="tel:+880 172 5463886" class="mb-3"><i class="fas fa-phone text-primary me-2"></i> +880 172 5463886</a>
                         </div>
                     </div>
                 </div>
