--- a/index.html
+++ b/index.html
@@ -99,11 +99,10 @@
                                     <a href="#" class="nav-item nav-link">Blog</a>
                                     <div class="nav-item dropdown">
                                         <a href="#" class="nav-link" data-bs-toggle="dropdown">
-                                            <span class="dropdown-toggle">Pages</span>
+                                            <span class="dropdown-toggle">Converter</span>
                                         </a>
                                         <div class="dropdown-menu">
-                                            <a href="#" class="dropdown-item">Our projects</a>
-                                            <a href="#" class="dropdown-item">Our team</a>
+                                            <a href="convert-md-html.html" class="dropdown-item">Markdown to HTML</a>
                                         </div>
                                     </div>
                                     <a href="contact-page.html" class="nav-item nav-link">Contact</a>
