--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 <div class="navbar-nav mx-0 mx-lg-auto bg-white">
                                     <a href="#" class="nav-item nav-link active">Home</a>
                                     <a href="about-us.html" class="nav-item nav-link">About</a>
-                                    <a href="#" class="nav-item nav-link">Service</a>
+                                    <a href="https://nextjs-subscription-payments-black-ten.vercel.app/" class="nav-item nav-link">Service</a>
                                     <a href="#" class="nav-item nav-link">Blog</a>
                                     <div class="nav-item dropdown">
                                         <a href="#" class="nav-link" data-bs-toggle="dropdown">
@@ -650,7 +650,7 @@
                             <h4 class="text-white mb-4">Quick Links</h4>
                             <a href="#"> Home</a>
                             <a href="https://mjahmad.com/about-us.html"> About </a>
-                            <a href="#"> Service</a>
+                            <a href="https://nextjs-subscription-payments-black-ten.vercel.app/"> Service</a>
                             <a href="#"> Portfolio</a>
                             <a href="https://mjahmad.com/contact-page.html"> Contact Us</a>
                         </div>
