--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Advanced Technology</h4>                        
-                            <a href="#"> Fundraising Support</a>                          
+                            <a href="fundraising.html"> Fundraising Support</a>                          
                             <a href="#"> Payment Integration</a>
                             <a href="#"> E-commerce Solution</a>
                             <a href="#"> Social Media Promotion</a>
