--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                     <a href="#" class="nav-item nav-link active">Home</a>
                                     <a href="about-us.html" class="nav-item nav-link">About</a>
                                     <a href="https://nextjs-subscription-payments-black-ten.vercel.app/" class="nav-item nav-link">Service</a>
-                                    <a href="#" class="nav-item nav-link">Blog</a>
+                                    <a href="https://mjahmad1.github.io/cwbd" class="nav-item nav-link">Blog</a>
                                     <div class="nav-item dropdown">
                                         <a href="#" class="nav-link" data-bs-toggle="dropdown">
                                             <span class="dropdown-toggle">Converter</span>
@@ -651,7 +651,7 @@
                             <a href="#"> Home</a>
                             <a href="https://mjahmad.com/about-us.html"> About </a>
                             <a href="https://nextjs-subscription-payments-black-ten.vercel.app/"> Service</a>
-                            <a href="#"> Portfolio</a>
+                            <a href="https://mjahmad1.github.io/cwbd"> Portfolio</a>
                             <a href="https://mjahmad.com/contact-page.html"> Contact Us</a>
                         </div>
                     </div>
@@ -659,10 +659,10 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Advanced Technology</h4>                        
                             <a href="fundraising.html"> Fundraising Support</a>                          
-                            <a href="#"> Payment Integration</a>
-                            <a href="#"> E-commerce Solution</a>
-                            <a href="#"> Social Media Promotion</a>
-                            <a href="#"> Custom Management Systems</a>
+                            <a href="https://nextjs-subscription-payments-black-ten.vercel.app/"> Payment Integration</a>
+                            <a href="ecommerce.html"> E-commerce Solution</a>
+                            <a href="social.html"> Social Media Promotion</a>
+                            <a href="custom.html"> Custom Management Systems</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
@@ -672,7 +672,7 @@
                             <a href="mailto:mjahmad2024@outlook.com"><i class="fas fa-envelope text-primary me-2"></i> mjahmad2024@outlook.com</a>
                             <a href="mailto:t-ally@outlook.com"><i class="fas fa-envelope text-primary me-2"></i> t-ally@outlook.com</a>
                             <a href="tel:+880 132 2371643"><i class="fas fa-phone text-primary me-2"></i> +880 132 2371643</a>
-                            <a href="tel:+880 172 5463886" class="mb-3"><i class="fas fa-phone text-primary me-2"></i> +880 172 5463886</a>
+                            <a href="tel:+880 178 8856628" class="mb-3"><i class="fas fa-phone text-primary me-2"></i> +880 178 8856628</a>
                         </div>
                     </div>
                 </div>
