--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
                                     <a href="https://mjahmad1.github.io/cwbd" class="nav-item nav-link">Blog</a>
                                     <div class="nav-item dropdown">
                                         <a href="#" class="nav-link" data-bs-toggle="dropdown">
-                                            <span class="dropdown-toggle">Converter</span>
+                                            <span class="dropdown-toggle">Resources</span>
                                         </a>
                                         <div class="dropdown-menu">
                                             <a href="convert-md-html.html" class="dropdown-item">Markdown to HTML</a>
+                                            <a href="quran.html.html" class="dropdown-item">Al Quranul Majid</a>
                                         </div>
                                     </div>
                                     <a href="contact-page.html" class="nav-item nav-link">Contact</a>
