--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 <div class="navbar-nav mx-0 mx-lg-auto bg-white">
                                     <a href="#" class="nav-item nav-link active">Home</a>
                                     <a href="about-us.html" class="nav-item nav-link">About</a>
-                                    <a href="https://nextjs-subscription-payments-black-ten.vercel.app/" class="nav-item nav-link">Service</a>
+                                    <a href="https://nextjs-subscription-payments-black-ten.vercel.app/" class="nav-item nav-link">Services</a>
                                     <a href="https://mjahmad1.github.io/cwbd" class="nav-item nav-link">Blog</a>
                                     <div class="nav-item dropdown">
                                         <a href="#" class="nav-link" data-bs-toggle="dropdown">
@@ -104,6 +104,16 @@
                                         <div class="dropdown-menu">
                                             <a href="convert-md-html.html" class="dropdown-item">Markdown to HTML</a>
                                             <a href="quran.html.html" class="dropdown-item">Al Quranul Majid</a>
+                                        </div>
+                                    </div>
+                                    <div class="nav-item dropdown">
+                                        <a href="#" class="nav-link" data-bs-toggle="dropdown">
+                                            <span class="dropdown-toggle">Services</span>
+                                        </a>
+                                        <div class="dropdown-menu">
+                                            <a href="convert-md-html.html" class="dropdown-item">Education</a>
+                                            <a href="quran.html.html" class="dropdown-item">E-commerce</a>
+                                            <a href="" class="dropdown-item">Non-profit</a>
                                         </div>
                                     </div>
                                     <a href="contact-page.html" class="nav-item nav-link">Contact</a>
@@ -669,7 +679,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
-                            <a href="#"><i class="fa fa-map-marker-alt text-primary me-2"></i> 27 Purana Paltan, Dhaka-1000, BD</a>
+                            <a href="#"><i class="fa fa-map-marker-alt text-primary me-2"></i>Purana Paltan,Dhaka-1000,BD</a>
                             <a href="mailto:mjahmad2024@outlook.com"><i class="fas fa-envelope text-primary me-2"></i> mjahmad2024@outlook.com</a>
                             <a href="mailto:t-ally@outlook.com"><i class="fas fa-envelope text-primary me-2"></i> t-ally@outlook.com</a>
                             <a href="tel:+880 132 2371643"><i class="fas fa-phone text-primary me-2"></i> +880 132 2371643</a>
