--- a/quran.html.html
+++ b/quran.html.html
@@ -592,7 +592,7 @@
 </div>
 <div class="footer-bottom row align-items-center justify-content-between">
 <p class="footer-text m-0 col-lg-6 col-md-12">
-الحقوق محفوظة لكل مسلم &copy;2016 - <script>document.write(new Date().getFullYear());</script> <a href=https://surahquran.com target=_blank>القرآن الكريم</a> | قالب <i class="fa fa-heart-o" aria-hidden=true></i> by Colorlib</p>
+الحقوق محفوظة لكل مسلم &copy;2020 - <script>document.write(new Date().getFullYear());</script> <a href=https://surahquran.com target=_blank>القرآن الكريم</a> | <i class="fa fa-heart-o" aria-hidden=true></i> by <a href=https://mjahmad.com target=_blank>MJ AHMAD</a></p>
 </div>
 </div>
 </footer>
