--- a/ecommerce.html
+++ b/ecommerce.html
@@ -420,51 +420,49 @@ font-size: 28px;
 						<div class="elementor-element elementor-element-af90fd9 elementor-nav-menu__align-center elementor-nav-menu--stretch elementor-nav-menu__text-align-center e-transform elementor-nav-menu--dropdown-tablet elementor-nav-menu--toggle elementor-nav-menu--burger elementor-widget elementor-widget-nav-menu" data-id="af90fd9" data-element_type="widget" data-settings="{&quot;full_width&quot;:&quot;stretch&quot;,&quot;_animation&quot;:&quot;none&quot;,&quot;layout&quot;:&quot;horizontal&quot;,&quot;submenu_icon&quot;:{&quot;value&quot;:&quot;&lt;svg class=\&quot;e-font-icon-svg e-fas-caret-down\&quot; viewBox=\&quot;0 0 320 512\&quot; xmlns=\&quot;http:\/\/www.w3.org\/2000\/svg\&quot;&gt;&lt;path d=\&quot;M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z\&quot;&gt;&lt;\/path&gt;&lt;\/svg&gt;&quot;,&quot;library&quot;:&quot;fa-solid&quot;},&quot;toggle&quot;:&quot;burger&quot;,&quot;_transform_rotateZ_effect&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]},&quot;_transform_rotateZ_effect_tablet&quot;:{&quot;unit&quot;:&quot;deg&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]},&quot;_transform_rotateZ_effect_mobile&quot;:{&quot;unit&quot;:&quot;deg&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="nav-menu.default">
 				<div class="elementor-widget-container">
 						<nav aria-label="Menu" class="elementor-nav-menu--main elementor-nav-menu__container elementor-nav-menu--layout-horizontal e--pointer-none">
-				<ul id="menu-1-af90fd9" class="elementor-nav-menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-2375 current_page_item menu-item-3242"><a href="https://intellecit.com/bd/" aria-current="page" class="elementor-item elementor-item-active">Home</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-23"><a href="https://intellecit.com/bd/about-us/" class="elementor-item">About Us</a></li>
+				<ul id="menu-1-af90fd9" class="elementor-nav-menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-2375 current_page_item menu-item-3242"><a href="https://mjahmad.com" aria-current="page" class="elementor-item elementor-item-active">Home</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-23"><a href="about-us.html" class="elementor-item">About Us</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1266"><a href="#" class="elementor-item elementor-item-anchor">Service</a>
 <ul class="sub-menu elementor-nav-menu--dropdown">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1267"><a href="https://intellecit.com/bd/professional-seo-service/" class="elementor-sub-item">Search Engine Optimization</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1434"><a href="https://intellecit.com/bd/social-media-marketing-service-in-bangladesh/" class="elementor-sub-item">Social Media Marketing</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3667"><a href="https://intellecit.com/bd/best-content-marketing-services/" class="elementor-sub-item">Content Marketing</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1875"><a href="https://intellecit.com/bd/best-google-ads-service/" class="elementor-sub-item">Google Ads PPC Management</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3731"><a href="https://intellecit.com/bd/professional-website-designing-services/" class="elementor-sub-item">Web Design And Development</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3730"><a href="https://intellecit.com/bd/professional-influencer-marketing-services/" class="elementor-sub-item">Influencer Marketing</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1267"><a href="https://mjahmad1.github.io/cwbd/" class="elementor-sub-item">Search Engine Optimization</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1434"><a href="https://mjahmad1.github.io/cwbd/" class="elementor-sub-item">Social Media Marketing</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3667"><a href="https://mjahmad1.github.io/cwbd/" class="elementor-sub-item">Content Marketing</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1875"><a href="https://mjahmad1.github.io/cwbd/" class="elementor-sub-item">Google Ads PPC Management</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3731"><a href="https://mjahmad1.github.io/cwbd/" class="elementor-sub-item">Web Design And Development</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3730"><a href="https://mjahmad1.github.io/cwbd/" class="elementor-sub-item">Influencer Marketing</a></li>
 </ul>
 </li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-876"><a href="#" class="elementor-item elementor-item-anchor">Case Studies</a>
 <ul class="sub-menu elementor-nav-menu--dropdown">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-885"><a href="https://intellecit.com/bd/ppc-portfolio/" class="elementor-sub-item">PPC Portfolio</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-952"><a href="https://intellecit.com/bd/seo-portfolio/" class="elementor-sub-item">SEO Portfolio</a></li>
-</ul>
+	</ul>
 </li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-485"><a href="https://intellecit.com/bd/blog/" class="elementor-item">Blog</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a href="https://intellecit.com/bd/contact/" class="elementor-item">Contact</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-485"><a href="https://mjahmad1.github.io/cwbd" class="elementor-item">Blog</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a href="contact-page.html" class="elementor-item">Contact</a></li>
 </ul>			</nav>
 					<div class="elementor-menu-toggle" role="button" tabindex="0" aria-label="Menu Toggle" aria-expanded="false">
 			<svg aria-hidden="true" role="presentation" class="elementor-menu-toggle__icon--open e-font-icon-svg e-eicon-menu-bar" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg"><path d="M104 333H896C929 333 958 304 958 271S929 208 896 208H104C71 208 42 237 42 271S71 333 104 333ZM104 583H896C929 583 958 554 958 521S929 458 896 458H104C71 458 42 487 42 521S71 583 104 583ZM104 833H896C929 833 958 804 958 771S929 708 896 708H104C71 708 42 737 42 771S71 833 104 833Z"></path></svg><svg aria-hidden="true" role="presentation" class="elementor-menu-toggle__icon--close e-font-icon-svg e-eicon-close" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg"><path d="M742 167L500 408 258 167C246 154 233 150 217 150 196 150 179 158 167 167 154 179 150 196 150 212 150 229 154 242 171 254L408 500 167 742C138 771 138 800 167 829 196 858 225 858 254 829L496 587 738 829C750 842 767 846 783 846 800 846 817 842 829 829 842 817 846 804 846 783 846 767 842 750 829 737L588 500 833 258C863 229 863 200 833 171 804 137 775 137 742 167Z"></path></svg>			<span class="elementor-screen-only">Menu</span>
 		</div>
 					<nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" aria-hidden="true">
-				<ul id="menu-2-af90fd9" class="elementor-nav-menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-2375 current_page_item menu-item-3242"><a href="https://intellecit.com/bd/" aria-current="page" class="elementor-item elementor-item-active" tabindex="-1">Home</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-23"><a href="https://intellecit.com/bd/about-us/" class="elementor-item" tabindex="-1">About Us</a></li>
+				<ul id="menu-2-af90fd9" class="elementor-nav-menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-2375 current_page_item menu-item-3242"><a href="" aria-current="page" class="elementor-item elementor-item-active" tabindex="-1">Home</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-23"><a href="about-us.html" class="elementor-item" tabindex="-1">About Us</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1266"><a href="#" class="elementor-item elementor-item-anchor" tabindex="-1">Service</a>
 <ul class="sub-menu elementor-nav-menu--dropdown">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1267"><a href="https://intellecit.com/bd/professional-seo-service/" class="elementor-sub-item" tabindex="-1">Search Engine Optimization</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1434"><a href="https://intellecit.com/bd/social-media-marketing-service-in-bangladesh/" class="elementor-sub-item" tabindex="-1">Social Media Marketing</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3667"><a href="https://intellecit.com/bd/best-content-marketing-services/" class="elementor-sub-item" tabindex="-1">Content Marketing</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1875"><a href="https://intellecit.com/bd/best-google-ads-service/" class="elementor-sub-item" tabindex="-1">Google Ads PPC Management</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3731"><a href="https://intellecit.com/bd/professional-website-designing-services/" class="elementor-sub-item" tabindex="-1">Web Design And Development</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3730"><a href="https://intellecit.com/bd/professional-influencer-marketing-services/" class="elementor-sub-item" tabindex="-1">Influencer Marketing</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1267"><a href="" class="elementor-sub-item" tabindex="-1">Search Engine Optimization</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1434"><a href="" class="elementor-sub-item" tabindex="-1">Social Media Marketing</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3667"><a href="" class="elementor-sub-item" tabindex="-1">Content Marketing</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1875"><a href="" class="elementor-sub-item" tabindex="-1">Google Ads PPC Management</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3731"><a href="" class="elementor-sub-item" tabindex="-1">Web Design And Development</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3730"><a href="" class="elementor-sub-item" tabindex="-1">Influencer Marketing</a></li>
 </ul>
 </li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-876"><a href="#" class="elementor-item elementor-item-anchor" tabindex="-1">Case Studies</a>
 <ul class="sub-menu elementor-nav-menu--dropdown">
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-885"><a href="https://intellecit.com/bd/ppc-portfolio/" class="elementor-sub-item" tabindex="-1">PPC Portfolio</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-952"><a href="https://intellecit.com/bd/seo-portfolio/" class="elementor-sub-item" tabindex="-1">SEO Portfolio</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-885"><a href="" class="elementor-sub-item" tabindex="-1">PPC Portfolio</a></li>
+	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-952"><a href="" class="elementor-sub-item" tabindex="-1">SEO Portfolio</a></li>
 </ul>
 </li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-485"><a href="https://intellecit.com/bd/blog/" class="elementor-item" tabindex="-1">Blog</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a href="https://intellecit.com/bd/contact/" class="elementor-item" tabindex="-1">Contact</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-485"><a href="https://ahmad1.github.io/cwbd" class="elementor-item" tabindex="-1">Blog</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a href="contact-page.html" class="elementor-item" tabindex="-1">Contact</a></li>
 </ul>			</nav>
 				</div>
 				</div>
@@ -475,7 +473,7 @@ font-size: 28px;
 						<div class="elementor-element elementor-element-e8bbec2 elementor-align-right elementor-widget elementor-widget-button" data-id="e8bbec2" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 							<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://calendly.com/intellecsmm/30min">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">CALL NOW</span>
 					</span>
@@ -517,7 +515,7 @@ font-size: 28px;
 				<div class="elementor-element elementor-element-bc2627c elementor-widget elementor-widget-button" data-id="bc2627c" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 							<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="tel:01781250856">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="tel:01725463886">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Book A Meeting</span>
 					</span>
@@ -1741,22 +1739,22 @@ and Web Development</a></h2>		</div>
 							<li class="elementor-icon-list-item">
 											<span class="elementor-icon-list-icon">
 							<svg aria-hidden="true" class="e-font-icon-svg e-fas-location-arrow" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M444.52 3.52L28.74 195.42c-47.97 22.39-31.98 92.75 19.19 92.75h175.91v175.91c0 51.17 70.36 67.17 92.75 19.19l191.9-415.78c15.99-38.39-25.59-79.97-63.97-63.97z"></path></svg>						</span>
-										<span class="elementor-icon-list-text">House 2/1, Road 2, Block C, Mirpur, Bangladesh</span>
+										<span class="elementor-icon-list-text">House 27,Purana Paltan, Dhaka-1000, Bangladesh</span>
 									</li>
 								<li class="elementor-icon-list-item">
-											<a href="tel:+8801886404458">
+											<a href="tel:+8801725463886">
 
 												<span class="elementor-icon-list-icon">
 							<svg aria-hidden="true" class="e-font-icon-svg e-fas-phone-alt" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"></path></svg>						</span>
-										<span class="elementor-icon-list-text">+8801886-404458</span>
+										<span class="elementor-icon-list-text">+8801725463886</span>
 											</a>
 									</li>
 								<li class="elementor-icon-list-item">
-											<a href="mailto:contact@intellecit.com">
+											<a href="mailto:t-ally@outlook.com">
 
 												<span class="elementor-icon-list-icon">
 							<svg aria-hidden="true" class="e-font-icon-svg e-far-envelope" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"></path></svg>						</span>
-										<span class="elementor-icon-list-text">contact@intellecit.com</span>
+										<span class="elementor-icon-list-text">t-ally@outlook.com</span>
 											</a>
 									</li>
 						</ul>
@@ -1768,7 +1766,7 @@ and Web Development</a></h2>		</div>
 		</section>
 				<div class="elementor-element elementor-element-1d05670 elementor-widget elementor-widget-heading" data-id="1d05670" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">© 2024. All Rights Reserved by Intellec IT BD</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">© 2025. All Rights Reserved by <a href="https://mjahmad.com">MJ AHMAD</a></h2>		</div>
 				</div>
 					</div>
 		</div>
