--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                                         </a>
                                         <div class="dropdown-menu">
                                             <a href="convert-md-html.html" class="dropdown-item">Education</a>
-                                            <a href="quran.html.html" class="dropdown-item">E-commerce</a>
-                                            <a href="" class="dropdown-item">Non-profit</a>
+                                            <a href="ecommerce.html" class="dropdown-item">E-commerce</a>
+                                            <a href="fund.html" class="dropdown-item">Non-profit</a>
                                         </div>
                                     </div>
                                     <a href="contact-page.html" class="nav-item nav-link">Contact</a>
@@ -668,7 +668,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Advanced Technology</h4>                        
-                            <a href="fundraising.html"> Fundraising Support</a>                          
+                            <a href="fund.html"> Fundraising Support</a>                          
                             <a href="https://nextjs-subscription-payments-black-ten.vercel.app/"> Payment Integration</a>
                             <a href="ecommerce.html"> E-commerce Solution</a>
                             <a href="social.html"> Social Media Promotion</a>
