--- a/fund.html
+++ b/fund.html
@@ -149,9 +149,7 @@
             <button class="btn" onclick="window.location.href='https://www.launchgood.com/'"><span>Start Now</span></button>
         </div>
     <footer>
-        <p> <b>"With a Vision for Tomorrow's Leaders"
-        </b>-by-
-    </p>
+        <p> <b>"With a Vision for Tomorrow's Leaders"</p>
         <div class="footer-links">
             <a href="https://mjahmad.com"><b>MJ AHMAD</b></a>
         </div>
