--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <!-- Modal Search End -->
 
 
-        <!-- Carousel Start -->
+       <!-- Carousel Start -->
         <div class="header-carousel owl-carousel overflow-hidden">
             <div class="header-carousel-item hero-section">
                 <div class="hero-bg-half-1"></div>
@@ -159,11 +159,13 @@
                         <div class="row g-4 align-items-center">
                             <div class="col-lg-7 animated fadeInLeft">
                                 <div class="text-sm-center text-md-start">
-                                    <h1 class="display-2 text-white mb-4">Uniting for a Brighter Future</h1>
-                                    <p class="mb-5 fs-5">By working together, we aim to build a nation that is bright, peaceful, and modern
+                                    <h4 class="text-white text-uppercase fw-bold mb-4">Tech Innovator</h4>
+                                    <h1 class="display-2 text-white mb-4">Pioneering Full-Stack Development Solutions</h1>
+                                    <p class="mb-5 fs-5">Our goal is to help businesses and organizations thrive in the digital age by offering innovative and efficient solutions......
                                     </p>
                                     <div class="d-flex justify-content-center justify-content-md-start flex-shrink-0 mb-4">
                                         <a class="btn btn-light py-3 px-4 px-md-5 me-2" href="#"><i class="fas fa-play-circle me-2"></i> Watch Video</a>
+                                        <a class="btn btn-primary py-3 px-4 px-md-5 ms-2" href="about11.html">Learn More</a>
                                     </div>
                                 </div>
                             </div>
@@ -179,12 +181,13 @@
                         <div class="row g-4 align-items-center">
                             <div class="col-lg-7 animated fadeInLeft">
                                 <div class="text-sm-center text-md-start">
-                                    <h4 class="text-white text-uppercase fw-bold mb-4">Protecting Freedom </h4>
-                                    <h1 class="display-2 text-white mb-4">with the Power of Technology,</h1>
-                                    <p class="mb-5 fs-5"><b> MJ-Ahmad's Pledge! </b> we need to build a bright, peaceful, modern, educated, cooperative, and compassionate Bangladesh.
+                                    <h4 class="text-white text-uppercase fw-bold mb-4">Full Stack Developer</h4>
+                                    <h1 class="display-2 text-white mb-4">Expert in React, Node.js, and Cloud Architecture</h1>
+                                    <p class="mb-5 fs-5">Our goal is to help businesses and organizations thrive in the digital age by offering innovative and efficient solutions......
                                     </p>
                                     <div class="d-flex justify-content-center justify-content-md-start flex-shrink-0 mb-4">
                                         <a class="btn btn-light py-3 px-4 px-md-5 me-2" href="#"><i class="fas fa-play-circle me-2"></i> Watch Video</a>
+                                        <a class="btn btn-primary py-3 px-4 px-md-5 ms-2" href="about11.html">Learn More</a>
                                     </div>
                                 </div>
                             </div>
